essaimsGraphe.html courbe nombre d'essaims

--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -38,7 +38,9 @@
 					class="bi-table" th:title="#{statistiquesproduction}"
 					aria-hidden="true"></a> <a th:href="@{/essaim/statistiquesage}"
 					class="bi-bar-chart" th:title="#{statistiquesage}"
-					aria-hidden="true"></a>
+					aria-hidden="true"></a> &nbsp; <a
+					th:href="@{'/essaim/grapheEssaims'}" class="bi-graph-up"
+					th:title="#{GrapheNbEssaims}" aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
