essaimsGraphe correction coquille

--- a/src/main/resources/templates/essaim/essaimsGraphe.html
+++ b/src/main/resources/templates/essaim/essaimsGraphe.html
@@ -9,7 +9,7 @@
 <script th:replace="~{include :: chartjs-adapter}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported essaims, dates, nbd */
+	/* exported essaims, dates, nbs */
 	const essaims = /*[[#{Essaims}]]*/null;
 	const dates = /*[[${dates}]]*/null;
 	const nbs = /*[[${nbs}]]*/null;
