--- a/src/main/resources/templates/ruche/ruchesGraphe.html
+++ b/src/main/resources/templates/ruche/ruchesGraphe.html
@@ -9,13 +9,18 @@
 <script th:replace="~{include :: chartjs-adapter}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported ruches, datesTotal, nbTotal, ruchesProd, datesProdTotal, nbProdTotal */
+	/* exported ruches, datesTotal, nbTotal, ruchesProd, datesProdTotal, nbProdTotal, nbsProd, datesProd, essaimsProd */
 	const ruches = /*[[#{Ruches}]]*/null;
 	const datesTotal = /*[[${datesTotal}]]*/null;
 	const nbTotal = /*[[${nbTotal}]]*/null;
 	const ruchesProd = /*[[#{RuchesProd}]]*/null;
 	const datesProdTotal = /*[[${datesProdTotal}]]*/null;
 	const nbProdTotal = /*[[${nbProdTotal}]]*/null;
+
+	const nbsProd = /*[[${nbsProd}]]*/null;
+	const datesProd = /*[[${datesProd}]]*/null;
+	const essaimsProd = /*[[#{EssaimsProd}]]*/null;
+
 </script>
 </head>
 <body>
