--- a/src/main/resources/templates/essaim/essaimsGraphe.html
+++ b/src/main/resources/templates/essaim/essaimsGraphe.html
@@ -9,11 +9,13 @@
 <script th:replace="~{include :: chartjs-adapter}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported essaims, dates, nbs, datesProd, nbsProd, essaimsProd */
+	/* exported ruches, datesTotal, ruchesProd, datesProdTotal, essaims, dates, datesProd, essaimsProd */
+	const ruches = /*[[#{Ruches}]]*/null;
+	const datesTotal = /*[[${datesTotal}]]*/null;
+	const ruchesProd = /*[[#{RuchesProd}]]*/null;
+	const datesProdTotal = /*[[${datesProdTotal}]]*/null;
 	const essaims = /*[[#{Essaims}]]*/null;
 	const dates = /*[[${dates}]]*/null;
-	const nbs = /*[[${nbs}]]*/null;
-	const nbsProd = /*[[${nbsProd}]]*/null;
 	const datesProd = /*[[${datesProd}]]*/null;
 	const essaimsProd = /*[[#{EssaimsProd}]]*/null;
 </script>
