--- a/src/main/resources/templates/ruche/ruchesGraphe.html
+++ b/src/main/resources/templates/ruche/ruchesGraphe.html
@@ -9,16 +9,13 @@
 <script th:replace="~{include :: chartjs-adapter}"></script>
 <script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* exported ruches, datesTotal, ruchesProd, datesProdTotal, nbsProd,
-	  datesProd, essaimsProd, dates, nbs, essaims */
+	/* exported ruches, datesTotal, ruchesProd, datesProdTotal, datesProd, essaimsProd, dates, essaims */
 	const ruches = /*[[#{Ruches}]]*/null;
 	const datesTotal = /*[[${datesTotal}]]*/null;
 	const ruchesProd = /*[[#{RuchesProd}]]*/null;
 	const datesProdTotal = /*[[${datesProdTotal}]]*/null;
-	const nbsProd = /*[[${nbsProd}]]*/null;
 	const datesProd = /*[[${datesProd}]]*/null;
 	const essaimsProd = /*[[#{EssaimsProd}]]*/null;
-	const nbs = /*[[${nbs}]]*/null;
 	const dates = /*[[${dates}]]*/null;
 	const essaims = /*[[#{Essaims}]]*/null;
 </script>
