--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -41,6 +41,12 @@
 					aria-hidden="true"></a> &nbsp; <a
 					th:href="@{'/essaim/grapheEssaims'}" class="bi-graph-up"
 					th:title="#{GrapheNbEssaims}" aria-hidden="true"></a>
+					
+					<a id="descend"
+					th:href="@{/essaim/descendance}"
+					class="bi-diagram-3" th:title="#{Descendance}"
+					aria-hidden="true"></a>
+					
 			</div>
 		</div>
 	</div>
