--- a/src/main/resources/templates/essaim/essaimsDescendance.html
+++ b/src/main/resources/templates/essaim/essaimsDescendance.html
@@ -9,7 +9,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col">
-				<h1 class="item" th:text="#{Essaims}"></h1>
+				<h1 class="item">
+					<a th:href="@{'/essaim/liste'}" th:text="#{Essaims}"></a>
+					<th:block th:text="#{sep}+#{Descendances}"></th:block>
+				</h1>
 			</div>
 		</div>
 	</div>
@@ -28,8 +31,10 @@
 				<tr th:each="e, i : ${essaims}">
 					<td><a th:href="@{'/essaim/'+${e.id}}" th:text="${e.nom}"></a></td>
 					<td><a th:text="${essProfond[i.index]}"></a></td>
-					<td><a th:href="@{'/essaim/'+${e.souche?.id}}" th:text="${e.souche?.nom}"></a></td>
-					<td><a th:href="@{'/essaim/'+${essRoot[i.index]?.id}}" th:text="${essRoot[i.index]?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${e.souche?.id}}"
+						th:text="${e.souche?.nom}"></a></td>
+					<td><a th:href="@{'/essaim/'+${essRoot[i.index]?.id}}"
+						th:text="${essRoot[i.index]?.nom}"></a></td>
 				</tr>
 			</tbody>
 		</table>
