--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -69,7 +69,7 @@
 
 <script defer th:fragment="jspdf" th:src="@{/js/jspdf-2.5.1.umd.min.js}"></script>
 
-<script th:fragment="jsChart" th:src="@{/js/chart.umd.min-4.4.1.js}"></script>
+<script th:fragment="jsChart" th:src="@{/js/chart.umd.4.4.2.js}"></script>
 
 <script th:fragment="jsChartZoom" th:src="@{/js/chartjs-plugin-zoom.min-2.0.1.js}"></script>
 <script th:fragment="jsChartZoomHammer" th:src="@{/js/hammer.min-2.0.8.js}"></script>
