layout buttons listes ruches hausses ruchers essaims personnes récoltes

--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -9,30 +9,30 @@
 		const Ruchers = /*[[#{Ruchers}]]*/null;
 		document.addEventListener('DOMContentLoaded', () => {
 			const idTbl = '#ruchers';
-			new DataTable(idTbl, {
-				dom: 'Blftip',
+			const table = new DataTable(idTbl, {
 				scrollX: true,
-				buttons: ['csv', {
-					extend: 'pdf',
-					exportOptions: {
-						columns: ':visible'
-					},
-					action: function (e, dt, node, config) {
-						config.title = Ruchers + ' ' + (new Date()).toLocaleDateString();
-						const inputSearch = this.search();
-						if (inputSearch.length !== 0) {
-							config.title += ' <' + inputSearch + '>';
-						}
-						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-					},
-				}, {
-						extend: 'print',
-						text: buttontextprint
-					}, {
-						extend: 'colvis',
-						text: buttontextcol
-					}]
-			});
+				layout:  {
+	                  topStart: {
+					    buttons: [
+						  'csv',
+						  {  extend: 'pdfHtml5', 
+						    exportOptions: {columns: ':visible'},
+						    customize: function (doc) {
+						    let title = Ruchers + ' ' + (new Date()).toLocaleDateString();
+						    const inputSearch = table.search();
+						    if (inputSearch.length !== 0) {
+						       title += ' <' + inputSearch + '>';
+						    }
+						    doc.content[0].text = title;
+						  }},
+						  {extend: 'print', text: buttontextprint,
+							exportOptions: { columns: ':visible' },
+							},
+						  {extend: 'colvis', text: buttontextcol},
+						  'pageLength'
+					    ]}
+				  }
+			 });
 		});
 	</script>
 </head>
