--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -12,24 +12,28 @@
 		document.addEventListener('DOMContentLoaded', () => {
 			const table = new DataTable('#hausses', {
 				select: {style: 'multi+shift'},
-				dom: 'Blftip',
 				scrollX: true,
-				buttons: [
-					'csv',
-					{
-						extend: 'pdf', exportOptions: {columns: ':visible'},
-						action: function (e, dt, node, config) {
-							config.title = Hausses + ' ' + (new Date()).toLocaleDateString();
-							const inputSearch = table.search();
-							if (inputSearch.length !== 0) {
-								config.title += ' <' + inputSearch + '>';
-							}
-							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-						}
-					},
-					{extend: 'print', text: buttTxtPrint},
-					{extend: 'colvis', text: buttTxtCol}
-				]
+				layout:  {
+	                  topStart: {
+					    buttons: [
+						  'csv',
+						  {  extend: 'pdfHtml5', 
+						    exportOptions: {columns: ':visible'},
+						    customize: function (doc) {
+						    let title = Hausses + ' ' + (new Date()).toLocaleDateString();
+						    const inputSearch = table.search();
+						    if (inputSearch.length !== 0) {
+						       title += ' <' + inputSearch + '>';
+						    }
+						    doc.content[0].text = title;
+						  }},
+						  {extend: 'print', text: buttTxtPrint,
+							exportOptions: { columns: ':visible' },
+							},
+						  {extend: 'colvis', text: buttTxtCol},
+						  'pageLength'
+					    ]}
+					}
 			});
 			function updateLinks(e, dt, type) {
 				if (type === 'row') {
