--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -8,25 +8,29 @@
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		const Personnes = /*[[#{Personnes}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
-			new DataTable('#personnes', {
-				dom: 'Blftip',
+			const table = new DataTable('#personnes', {
 				scrollX: true,
-				buttons: [
-					'csv',
-					{
-						extend: 'pdf', exportOptions: {columns: ':visible'},
-						action: function (e, dt, node, config) {
-							config.title = Personnes + ' ' + (new Date()).toLocaleDateString();
-							const inputSearch = this.search();
-							if (inputSearch.length !== 0) {
-								config.title += ' <' + inputSearch + '>';
-							}
-							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-						}
-					},
-					{extend: 'print', text: buttTxtPrint},
-					{extend: 'colvis', text: buttTxtCol}
-				]
+				layout:  {
+                  topStart: {
+				    buttons: [
+					  'csv',
+					  {  extend: 'pdfHtml5', 
+					    exportOptions: {columns: ':visible'},
+					    customize: function (doc) {
+					    let title = Personnes + ' ' + (new Date()).toLocaleDateString();
+					    const inputSearch = table.search();
+					    if (inputSearch.length !== 0) {
+					       title += ' <' + inputSearch + '>';
+					    }
+					    doc.content[0].text = title;
+					  }},
+					  {extend: 'print', text: buttTxtPrint,
+						exportOptions: { columns: ':visible' },
+						},
+					  {extend: 'colvis', text: buttTxtCol},
+					  'pageLength'
+				    ]}
+				}
 			});
 		});
 	</script>
