--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -3,37 +3,41 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:inline="javascript">
-		/* globals DataTable */
-		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
-		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-		const Personnes = /*[[#{Personnes}]]*/ null;
-		document.addEventListener('DOMContentLoaded', () => {
-			const table = new DataTable('#personnes', {
-				scrollX: true,
-				layout:  {
-                  topStart: {
-				    buttons: [
-					  'csv',
-					  {  extend: 'pdfHtml5', 
-					    exportOptions: {columns: ':visible'},
-					    customize: function (doc) {
-					    let title = Personnes + ' ' + (new Date()).toLocaleDateString();
-					    const inputSearch = table.search();
-					    if (inputSearch.length !== 0) {
-					       title += ' <' + inputSearch + '>';
-					    }
-					    doc.content[0].text = title;
-					  }},
-					  {extend: 'print', text: buttTxtPrint,
-						exportOptions: { columns: ':visible' },
+	/* globals DataTable */
+	const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
+	const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
+	const Personnes = /*[[#{Personnes}]]*/ null;
+	document.addEventListener('DOMContentLoaded', () => {
+		const table = new DataTable('#personnes', {
+			scrollX: true,
+			layout: {
+				topStart: {
+					buttons: [
+						'csv',
+						{
+							extend: 'pdfHtml5',
+							exportOptions: { columns: ':visible' },
+							customize: function(doc) {
+								let title = Personnes + ' ' + (new Date()).toLocaleDateString();
+								const inputSearch = table.search();
+								if (inputSearch.length !== 0) {
+									title += ' <' + inputSearch + '>';
+								}
+								doc.content[0].text = title;
+							}
 						},
-					  {extend: 'colvis', text: buttTxtCol},
-					  'pageLength'
-				    ]}
+						{
+							extend: 'print', text: buttTxtPrint,
+							exportOptions: { columns: ':visible' },
+						},
+						{ extend: 'colvis', text: buttTxtCol },
+						'pageLength'
+					]
 				}
-			});
+			}
 		});
-	</script>
+	});
+  </script>
 </head>
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
