--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -12,18 +12,33 @@
 				location = location.href.slice(0, location.href.lastIndexOf('/'))
 					+ '/' + event.target.checked;
 			});
-			new DataTable('#transhumances', {
-				dom: 'Blftip',
+			const table = new DataTable('#transhumances', {
 				scrollX: true,
-				buttons: [
-					'csv',
-					{
-						extend: 'pdf', exportOptions: {columns: ':visible'},
-						title: transhumances + ' ' + (new Date()).toLocaleDateString()
-					},
-					{extend: 'print', text: buttontextprint},
-					{extend: 'colvis', text: buttontextcol}
-				]
+				layout: {
+					topStart: {
+						buttons: [
+							'csv',
+							{
+								extend: 'pdfHtml5',
+								exportOptions: { columns: ':visible' },
+								customize: function(doc) {
+									let title = transhumances + ' ' + (new Date()).toLocaleDateString();
+									const inputSearch = table.search();
+									if (inputSearch.length !== 0) {
+										title += ' <' + inputSearch + '>';
+									}
+									doc.content[0].text = title;
+								}
+							},
+							{
+								extend: 'print', text: buttontextprint,
+								exportOptions: { columns: ':visible' },
+							},
+							{ extend: 'colvis', text: buttontextcol },
+							'pageLength'
+						]
+					}
+				}
 			});
 		});
 	</script>
