--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -21,25 +21,34 @@
 				}
 				event.preventDefault();
 			});
-			new DataTable('#ruches', {
-				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
+			const table = new DataTable('#ruches', {
 				scrollX: true,
-				buttons: [
-					'csv',
-					{
-						extend: 'pdf',
-						exportOptions: {
-							columns: ':visible'
-						},
-						title: rucheTypetxt + ' : ' + rucheTypeNom + ' - ' + listeRuches + ' '
-							+ (new Date()).toLocaleDateString()
-					}, {
-						extend: 'print',
-						text: buttontextprint
-					}, {
-						extend: 'colvis',
-						text: buttontextcol
-					}]
+				layout: {
+					topStart: {
+						buttons: [
+							'csv',
+							{
+								extend: 'pdfHtml5',
+								exportOptions: { columns: ':visible' },
+								customize: function(doc) {
+									let title = rucheTypetxt + ' : ' + rucheTypeNom + ' - ' + listeRuches + ' '
+									  + (new Date()).toLocaleDateString();
+									const inputSearch = table.search();
+									if (inputSearch.length !== 0) {
+										title += ' <' + inputSearch + '>';
+									}
+									doc.content[0].text = title;
+								}
+							},
+							{
+								extend: 'print', text: buttontextprint,
+								exportOptions: { columns: ':visible' },
+							},
+							{ extend: 'colvis', text: buttontextcol },
+							'pageLength'
+						]
+					}
+				}				
 			});
 		});
 	</script>
