--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -8,18 +8,33 @@
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		const rucheTypes = /*[[#{rucheTypes}]]*/ null;
 		document.addEventListener('DOMContentLoaded', () => {
-			new DataTable('#ruchetypes', {
-				dom: 'Blftip',
+			const table = new DataTable('#ruchetypes', {
 				scrollX: true,
-				buttons: [
-					'csv',
-					{
-						extend: 'pdf', exportOptions: {columns: ':visible'},
-						title: rucheTypes + ' ' + (new Date()).toLocaleDateString()
-					},
-					{extend: 'print', text: buttTxtPrint},
-					{extend: 'colvis', text: buttTxtCol}
-				]
+				layout: {
+					topStart: {
+						buttons: [
+							'csv',
+							{
+								extend: 'pdfHtml5',
+								exportOptions: { columns: ':visible' },
+								customize: function(doc) {
+									let title = rucheTypes + ' ' + (new Date()).toLocaleDateString();
+									const inputSearch = table.search();
+									if (inputSearch.length !== 0) {
+										title += ' <' + inputSearch + '>';
+									}
+									doc.content[0].text = title;
+								}
+							},
+							{
+								extend: 'print', text: buttTxtPrint,
+								exportOptions: { columns: ':visible' },
+							},
+							{ extend: 'colvis', text: buttTxtCol },
+							'pageLength'
+						]
+					}
+				}				
 			});
 		});
 	</script>
