--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -2,69 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
+<script th:replace="~{include :: jsruches}"></script>
 <script th:inline="javascript">
-	/* globals DataTable */
-	const Hausses = /*[[#{Hausses}]]*/ null;
-	const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
-	const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
-	const urlCommLot = /*[[@{/evenement/hausse/commentaireLot/}]]*/ null;
-	const selectHaTrait = /*[[#{selecthaussestraiter}]]*/ null;
-	document.addEventListener('DOMContentLoaded', () => {
-		const table = new DataTable('#hausses', {
-			select: { style: 'multi+shift' },
-			scrollX: true,
-			layout: {
-				topStart: {
-					buttons: [
-						'csv',
-						{
-							extend: 'pdfHtml5',
-							exportOptions: { columns: ':visible' },
-							customize: function(doc) {
-								let title = Hausses + ' ' + (new Date()).toLocaleDateString();
-								const inputSearch = table.search();
-								if (inputSearch.length !== 0) {
-									title += ' <' + inputSearch + '>';
-								}
-								doc.content[0].text = title;
-							}
-						},
-						{
-							extend: 'print', text: buttTxtPrint,
-							exportOptions: { columns: ':visible' },
-						},
-						{ extend: 'colvis', text: buttTxtCol },
-						'pageLength'
-					]
-				}
-			}
-		});
-		function updateLinks(e, dt, type) {
-			if (type === 'row') {
-				let noms = '';
-				table.rows({ selected: true }).data().pluck(0).each(function(value) {
-					const a = document.createElement('template');
-					a.innerHTML = value;
-					noms += a.content.children[0].getAttribute('href').
-						substring(a.content.children[0].getAttribute('href').lastIndexOf('/') + 1) + ',';
-				});
-				if (noms) {
-					noms = noms.substring(0, noms.length - 1);
-					document.getElementById('commentaire').setAttribute('href',
-						urlCommLot + noms);
-				} else {
-					document.getElementById('commentaire').setAttribute('href', '#');
-				}
-			}
-		}
-		table.on('select deselect', updateLinks);
-		document.getElementById('commentaire').addEventListener('click', event => {
-			if (event.target.getAttribute('href') === '#') {
-				alert(selectHaTrait);
-			}
-		});
-	});
-  </script>
+	/* exported	Hausses, buttTxtPrint, buttTxtCol, urlCommLot, selectHaTrait */
+	const Hausses = /*[[#{Hausses}]]*/null;
+	const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
+	const buttTxtCol = /*[[#{buttontextcol}]]*/null;
+	const urlCommLot = /*[[@{/evenement/hausse/commentaireLot/}]]*/null;
+	const selectHaTrait = /*[[#{selecthaussestraiter}]]*/null;
+</script>
 </head>
 <body>
 	<nav th:replace="~{navbar::navbar}"></nav>
@@ -120,6 +66,20 @@
 					<td th:text="${hausse.commentaire}"></td>
 				</tr>
 			</tbody>
+			<tfoot>
+				<tr>
+					<th th:text="#{nom}"></th>
+					<th th:text="#{ruche}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{dateAcquisition}"></th>
+					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
+					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{nbCadres}"></th>
+					<th th:text="#{nbCadresMax}"></th>
+					<th th:text="#{commentaire}"></th>
+				</tr>
+			</tfoot>
 		</table>
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
