--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -8,8 +8,7 @@
 	const buttontextcol = /*[[#{buttontextcol}]]*/null;
 	const Ruchers = /*[[#{Ruchers}]]*/null;
 	document.addEventListener('DOMContentLoaded', () => {
-		const idTbl = '#ruchers';
-		const table = new DataTable(idTbl, {
+		const table = new DataTable('#ruchers', {
 			scrollX: true,
 			layout: {
 				topStart: {
