--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -85,6 +85,26 @@
 					<td th:text="${ruche.commentaire}"></td>
 				</tr>
 			</tbody>
+			<tfoot>
+				<tr>
+					<th th:text="#{nom}"></th>
+					<th th:text="#{essaim}"></th>
+					<th th:text="#{rucher}"></th>
+					<th th:text="#{daterucher}"></th>
+					<th th:text="#{prod}"></th>
+					<th th:if="${session.voirInactif}" th:text="#{active}"></th>
+					<th th:text="#{dateAcquisition}"></th>
+					<th th:text="#{poidsVide}"></th>
+					<th th:text="#{nbCadresMax}"></th>
+					<th th:text="#{type}"></th>
+					<th th:text="#{Hausses}"></th>
+					<th:block th:if="${session.voirLatLon}">
+						<th th:text="#{latitude}"></th>
+						<th th:text="#{longitude}"></th>
+					</th:block>
+					<th th:text="#{COMMENTAIRERUCHE}"></th>
+				</tr>
+			</tfoot>
 		</table>
 	</div>
 	<footer th:replace="~{include::footer}"></footer>
