--- a/src/main/resources/templates/recolte/recoltesListe.html
+++ b/src/main/resources/templates/recolte/recoltesListe.html
@@ -37,7 +37,7 @@
 					<th th:text="#{date}"></th>
 					<th th:text="#{RucherS}"></th>
 					<th th:text="#{typeMiel}"></th>
-					<th th:text="#{poidsMielPot}"></th>
+					<th th:text="#{MielPot}" th:title="#{poidsMielPot}"></th>
 					<th th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
