rucherDists.html ajout globlas eslint : bootstrap

--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -3,7 +3,7 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:inline="javascript">
-		/* globals DataTable */
+		/* globals DataTable, bootstrap */
 		document.addEventListener('DOMContentLoaded', () => {
 			const distCalc = /*[[#{distCalc}]]*/ null;
 			const distCalcReset = /*[[#{distCalcReset}]]*/ null;
