--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -12,13 +12,13 @@
 				searching: false,
 				scrollX: true,
 				columnDefs: [
-				    {
-				    	// Pour aligner à droite la colonne des temps.
-				    	// https://datatables.net/manual/styling/classes#Cell-classes
-				        targets: 2,
-				        className: 'dt-right'
-				    }
-				  ]
+					{
+						// Pour aligner à droite la colonne des temps.
+						// https://datatables.net/manual/styling/classes#Cell-classes
+						targets: 2,
+						className: 'dt-right'
+						}
+					]
 			});
 			document.getElementById('dist').addEventListener('click', event => {
 				if (confirm(distCalc)) {
@@ -73,19 +73,31 @@
 			id="distsRuchers">
 			<thead>
 				<tr>
-					<th th:text="#{rucher}"></th>
-					<th th:text="#{DistanceV}"></th>
-					<th th:text="#{TempsV}"></th>
-					<th th:text="#{DistanceO}"></th>
+					<th rowspan="2" th:text="#{rucher}"></th>
+					<th:block th:if="${session.voirInactif}">
+						<th rowspan="2" th:text="#{actif}"></th>
+					</th:block>
+					<th colspan="3" th:text="#{Voiture}" style="text-align:center"></th>
+					<th rowspan="2" th:text="#{DistanceO}"></th>
+				</tr>
+				<tr>
+					<th th:text="#{Distance}"></th>
+					<th th:text="#{temps}"></th>
+					<th th:text="#{Vitesse}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="rr : ${rrs}">
 					<td><a th:text="${rr.nom}" th:href="@{'/rucher/'+${rr.id}}"></a></td>
+					<th:block th:if="${session.voirInactif}">
+						<td th:text="${rr.actif}?#{oui}:#{non}"></td>
+					</th:block>
 					<td
 						th:text="${dist[rrStat.index] == 0} ? '' : ${#numbers.formatDecimal(dist[rrStat.index],1,3)}">
 					</td>
 					<td th:text="${#temporals.format(temps[rrStat.index], 'HH:mm')}"></td>
+					<td th:text="${#numbers.formatDecimal(vitesse[rrStat.index],1,2)}">
+					</td>
 					<td
 						th:text="${#numbers.formatDecimal(distOiseau[rrStat.index],1,3)}"></td>
 				</tr>
