--- a/src/main/resources/templates/essaim/essaimsListe.html
+++ b/src/main/resources/templates/essaim/essaimsListe.html
@@ -61,7 +61,7 @@
 						<th rowspan="2" th:text="#{commDisp}"></th>
 					</th:block>
 					<th rowspan="2" th:text="#{dateAcquisition}"></th>
-					<th colspan="3" th:text="#{Reine}" style="text-align:center"></th>
+					<th colspan="3" th:text="#{Reine}" style="text-align:center" data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{souche}"></th>
 					<th rowspan="2" th:text="#{ag}" th:title="#{agressivite}"></th>
 					<th rowspan="2" th:text="#{pr}" th:title="#{proprete}"></th>
