--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -77,7 +77,7 @@
 					<th:block th:if="${session.voirInactif}">
 						<th rowspan="2" th:text="#{actif}"></th>
 					</th:block>
-					<th colspan="3" th:text="#{Voiture}" style="text-align:center"></th>
+					<th colspan="3" th:text="#{Voiture}" style="text-align:center" data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{DistanceO}"></th>
 				</tr>
 				<tr>
