--- a/src/main/resources/templates/rucher/rucherDists.html
+++ b/src/main/resources/templates/rucher/rucherDists.html
@@ -77,7 +77,8 @@
 					<th:block th:if="${session.voirInactif}">
 						<th rowspan="2" th:text="#{actif}"></th>
 					</th:block>
-					<th colspan="3" th:text="#{Voiture}" style="text-align:center" data-dt-order="disable"></th>
+					<th colspan="3" th:text="#{Voiture}" style="text-align: center"
+						data-dt-order="disable"></th>
 					<th rowspan="2" th:text="#{DistanceO}"></th>
 				</tr>
 				<tr>
@@ -95,7 +96,8 @@
 					<td
 						th:text="${dist[rrStat.index] == 0} ? '' : ${#numbers.formatDecimal(dist[rrStat.index],1,3)}">
 					</td>
-					<td th:text="${#temporals.format(temps[rrStat.index], 'HH:mm')}"></td>
+					<td
+						th:text="${dist[rrStat.index] == 0} ? '' : ${#temporals.format(temps[rrStat.index], 'HH:mm')}"></td>
 					<td th:text="${#numbers.formatDecimal(vitesse[rrStat.index],1,2)}">
 					</td>
 					<td
